Update the email

--- a/src/lib/emails/waitlist-welcome.html
+++ b/src/lib/emails/waitlist-welcome.html
@@ -31,7 +31,7 @@
       }
 
       /* Header */
-      .header {
+      header {
         text-align: center;
         padding: 40px 20px;
         background: linear-gradient(135deg, #000000 0%, #1a1a1a 100%);
@@ -243,13 +243,13 @@
   <body>
     <div class="email-container">
       <!-- Header -->
-      <div class="header">
-        <div class="logo">🤖 AI WhatsApp Bot</div>
+      <header>
+        <img class="logo" src="../../public/logo.png" alt="LeadMate" />
         <h1 class="welcome-title">Welcome to the Future!</h1>
         <p class="welcome-subtitle">
           You're now part of an exclusive community of innovators
         </p>
-      </div>
+      </header>
 
       <!-- Main Content -->
       <div class="content">
@@ -302,7 +302,7 @@
 
       <!-- Stats Section -->
       <div class="stats-section">
-        <div class="stats-number">2,000+</div>
+        <div class="stats-number">100+</div>
         <div class="stats-label">Businesses Already on the Waitlist</div>
       </div>
 
@@ -313,7 +313,6 @@
           We'll keep you updated on our progress, share exclusive insights, and
           notify you as soon as early access becomes available.
         </p>
-        <a href="#" class="cta-button">Follow Our Progress</a>
       </div>
 
       <!-- Footer -->
@@ -322,12 +321,6 @@
           Thanks for joining us on this exciting journey! We're building
           something special and can't wait to show you.
         </p>
-
-        <div class="social-links">
-          <a href="#" class="social-link">Twitter</a>
-          <a href="#" class="social-link">LinkedIn</a>
-          <a href="#" class="social-link">Blog</a>
-        </div>
 
         <p class="footer-text">
           Questions? Just reply to this email - we'd love to hear from you!
