fix: waitlist email

--- a/src/lib/emails/waitlist-welcome.html
+++ b/src/lib/emails/waitlist-welcome.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to the AI WhatsApp Bot Waitlist!</title>
+    <title>Welcome to the LeadMate Waitlist!</title>
     <style>
       /* Reset and base styles */
       * {
@@ -251,16 +251,13 @@
           alt="LeadMate"
         />
         <h1 class="welcome-title">Welcome to the Future!</h1>
-        <p class="welcome-subtitle">
-          You're now part of an exclusive community of innovators
-        </p>
       </header>
 
       <!-- Main Content -->
       <div class="content">
         <h2 class="section-title">🎉 You're In!</h2>
         <p style="color: #cccccc; margin-bottom: 24px; font-size: 16px">
-          Congratulations! You've successfully joined our AI WhatsApp Bot
+          Congratulations! You've successfully joined LeadMate
           waitlist. You're now among the first to experience the future of
           customer service automation.
         </p>
@@ -273,15 +270,6 @@
             <p class="benefit-description">
               Be among the first to get early access when we launch. Your spot
               is reserved and you'll get exclusive first-day access.
-            </p>
-          </div>
-
-          <div class="benefit-item">
-            <span class="benefit-icon">💎</span>
-            <h4 class="benefit-title">Founder's Pricing</h4>
-            <p class="benefit-description">
-              Lock in special founder's pricing that won't be available to the
-              public. Save up to 50% on your subscription.
             </p>
           </div>
 
